<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_margin="20dp"
    android:background="@drawable/bg_modal_dark">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_black"
        android:textStyle="bold|italic"
        android:lineSpacingMultiplier="1.1"
        android:textColor="@color/white"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:id="@+id/llNBrackets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="@drawable/player_style">

        <TextView
            android:layout_width="0dp"
            android:fontFamily="@font/helvetica_black"
            android:textStyle="bold|italic"
            android:lineSpacingMultiplier="1.1"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/number_of_brackets"
            android:textSize="20sp"
            android:layout_marginLeft="5dp"
            android:textAlignment="center"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/txtNBrackets"
            android:fontFamily="@font/helvetica_black"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            android:textColorHint="@color/search_hint"
            android:hint="@string/n"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:background="@drawable/player_style">

        <TextView
            android:layout_width="0dp"
            android:fontFamily="@font/helvetica_black"
            android:textStyle="bold|italic"
            android:lineSpacingMultiplier="1.1"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/minutes_for_match"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:textAlignment="center"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/txtMinutesForMatch"
            android:fontFamily="@font/helvetica_black"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            android:hint="@string/mm"
            android:textColorHint="@color/search_hint"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:background="@drawable/player_style">

    <TextView
        android:id="@+id/txtTimeNeed"
        android:layout_width="0dp"
        android:fontFamily="@font/helvetica_black"
        android:textStyle="bold|italic"
        android:lineSpacingMultiplier="1.1"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/time_need"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:textAlignment="center"
        android:layout_weight="1" />
</LinearLayout>

    <Button
        android:id="@+id/btnAddTimes"
        android:background="@drawable/buttons_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_black"
        android:textStyle="bold|italic"
        android:textColor="@color/white"
        android:text="@string/add_time_section"
        android:textSize="18sp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="5dp" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llTimes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="5dp"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancel"
            android:background="@drawable/button_generate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_black"
            android:textStyle="bold|italic"
            android:textColor="@color/button_danger"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp" />

        <Button
            android:id="@+id/btnConfirm"
            android:background="@drawable/button_generate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_black"
            android:textStyle="bold|italic"
            android:backgroundTint="@color/white"
            android:textColor="@color/button_confirm"
            android:text="@string/generate"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp" />
    </LinearLayout>
</LinearLayout>
</LinearLayout>